In frontend/admin register model Car to admin.site.

--- a/frontend/templates/frontend/car_details.html
+++ b/frontend/templates/frontend/car_details.html
@@ -3,8 +3,8 @@
 
 {% block content %}
     {% if booking_success %}
-        <em>You have successfully created a booking for this car. Someone from our staff
-        will contact you shortly.</em>
+        <em>You have successfully created a booking for this car.
+            Someone from our staff will contact you shortly.</em>
     {% endif %}
 
     <h1>{{ object.name }}</h1>
